--- a/index.Rmd
+++ b/index.Rmd
@@ -56,7 +56,7 @@ $Région, Département, EPCI, BV$
 
 -   Indice de jeunesse, pyramides des âges, carte
 
--   [Structure par âge à façon](1.2_structure.html#structure-par-âge-à-façon)
+-   [Structure par âge à façon](1.2_structure.html#déparements)
 
 ### 1.3 [Évolution de la population](1.3_evol.html)
 
